== Change Log

=== Edge

* Remove obviated Ruby 1.8.7 compatibility patch. [Sean Cribbs]
* Adjust StandardTags#relative_url_for for case when relative_url_root
is nil. [Sean Cribbs]
* Correct rendering error in extensions controller. [Sean Cribbs]
* Correct typo in config/boot.rb. [Sean Cribbs]
* Major refactoring and simplification of LoginSystem. [Sean Cribbs]
* Update Haml to 2.0.7. [Sean Cribbs]
* Upgrade to Rails 2.2.2. [Sean Cribbs]
* Cleanup the config class a little, add some more documentation. [Sean
Cribbs]
* Avoid bootstrap errors related to Radiant::Config by checking for
table existence. [Sean Cribbs]
* Correct status code typo in Admin::ResourceController. [Sean Cribbs]

=== 0.7.1 Engraving

* Properly escape page part contents in the UI. [John Muhl, Sean Cribbs]
* Fix tag reference popup and spec out helper better. [Sean Cribbs]

=== 0.7.0 Intaglio
* Add Roasters template. [Paul du Coudray]
* Make ResponseCache spec insensitive to key order. [Sean Cribbs]
* Adjust <r:children:count /> to use same options as <r:children:each />.
[Sean Cribbs]
* Allowing for custom labels and other options in save_model_button.
[Pat Allan]
* Ignoring TextMate project files. [Pat Allan]
* Present a more helpful error message when missing a mailer template.
[Nikolay Karev]
* Use ActiveRecord:Base#[] and ActiveRecord:Base#[]= instead of undocumented
read_attribute and write_attribute. [August Lilleas]
* Make extension installer use git submodules when appropriate. [Sean Cribbs]
* Ease extension updates by proxying deprecated named routes. [Sean Cribbs]
* Add support and specs for conditional GETs with ETags. [Sean Cribbs]
* Initialize and update submodules when freezing edge. [John Muhl]
* Add Nginx support to ResponseCache. [Sean Cribbs]
* Changed (some) permissions examples not to use login_system_matcher.
[Brandan Lennox]
* Remove expensive grep of Rails log in spec. [Rick DeNatale]
* Make markdown filter specs be tolerant of RDiscount. [Sean Cribbs]