@@ -6,6 +6,7 @@ core:
 
 === Edge
 
+* Brent Kroeker
 * Sean Cribbs
 
 === 0.7.1 Engraving
