@@ -11,6 +11,7 @@ class ApplicationController < ActionController::Base
   before_filter :set_current_user
   before_filter :set_user_language
   before_filter :set_javascripts_and_stylesheets 
+
   
   attr_accessor :config, :cache
   
