@@ -6,6 +6,7 @@ en:
   resource_controller:
     saved: "{{humanized_model_name}} saved below."
     validation_errors: "Validation errors occurred while processing this form. Please take a moment to review the form and correct any input errors before continuing."
+
     removed: "{{humanized_model_name}} has been deleted."  
     update_conflict: "{{humanized_model_name}} has been modified since it was last loaded. Changes cannot be saved without potentially losing data." 
   pages_controller:
@@ -185,7 +186,7 @@ en:
 
     day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
     abbr_day_names: [Sun, Mon, Tue, Wed, Thu, Fri, Sat]
-    month_names: [~, January, February, March, April, Mai, Juni, Juli, August, September, Oktober, November, Dezember]   
+    month_names: [~, January, February, March, April, May, June, July, August, September, October, November, December]   
     abbr_month_names: [~, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec]
     order: [ :year, :month, :day ]
   
