@@ -2,6 +2,8 @@
 
 === Edge
 
+* Reverse view paths order in extension loader. [Sean Cribbs, Brent 
+Kroeker]
 * Remove obviated Ruby 1.8.7 compatibility patch. [Sean Cribbs]
 * Adjust StandardTags#relative_url_for for case when relative_url_root
 is nil. [Sean Cribbs]
